--- a/redux-functions/package.json
+++ b/redux-functions/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
     "styled-components": "^6.0.0-rc.6",
     "zod": "^3.21.4"
   },
